добавил генерацию групп на главной форме
